# ArchStore

./: .gitignore  LICENSE  README.md  index.html  main.js  package-lock.json  package.json  setup.sh  vite.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs
src-tauri/src/commands/: install.rs  mod.rs  package.rs  search.rs  system.rs
src-tauri/src/parsers/: aur.rs  flatpak.rs  mod.rs  pacman.rs
src/css/: all-styles.css  base.css  components.css  layout.css  modals.css  variables.css
src/js/: main.js
src/js/api/: packages.js  system.js  tauri.js
src/js/ui/: detail.js  home.js  modal.js  search.js  settings.js
src/js/utils/: iconCache.js  icons.js  merge.js  normalize.js
