[package]
name = "archstore"
version = "0.1.0"
description = "A modern package manager GUI for Arch Linux"
authors = ["ArchStore Team"]
license = "MIT"
repository = "https://github.com/archstore/archstore"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "fs-exists", "fs-read-dir", "fs-read-file", "path-all", "protocol-asset", "dialog-all", "notification-all", "shell-execute"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
chrono = "0.4"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
rayon = "1.8"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
